tests/sksl/errors/InvalidAssignment.glsl
### Compilation failed:

error: 7: cannot assign to this expression
error: 8: cannot modify immutable variable 'u'
error: 9: cannot modify immutable variable 'x'
error: 11: cannot modify immutable variable 'x'
error: 12: cannot write to the same swizzle field more than once
error: 14: cannot modify immutable variable 'l'
error: 15: cannot modify immutable variable 'r'
error: 16: cannot modify immutable variable 'l'
error: 17: cannot assign to this expression
error: 18: cannot assign to this expression
error: 21: cannot modify immutable variable 'x'
error: 22: cannot modify immutable variable 'x'
error: 23: cannot modify immutable variable 's'
13 errors
